# Orbita

./: CMakeLists.txt  README.MD  imgui.ini
shaders/: basic.frag
src/: Actuador.h  Cube.h  PID.h  PlotBuffer.h  Satellite.h  Sensor.h  Shader.h  main.cpp
